--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -32,6 +32,10 @@ h2 {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  font-family: "Inter" "Arial" sans-serif;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
 }
 
 .card__like-button {
