--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,3 +1,12 @@
 .header {
   margin-top: 45px;
 }
+.header::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: #545454;
+  display: block;
+  opacity: 70%;
+  margin-top: 41px;
+}
