--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -26,7 +26,7 @@
   font-size: 42px;
   line-height: 48px;
   font-weight: 500;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   grid-area: title;
   margin: 0;
 }
@@ -47,7 +47,7 @@
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: "Inter", "Arial", sans-serif;
   grid-area: description;
   margin: 0;
 }
