--- a/pages/index.css
+++ b/pages/index.css
@@ -4,23 +4,43 @@
 @import url(../blocks/cards.css);
 
 @media screen and (max-width: 480px) {
+  .page {
+    margin: 0;
+  }
+
   .profile {
     flex-direction: column;
   }
+
   .profile__info {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     width: 100%;
+    margin-top: 30px;
   }
+
+  .profile__image {
+    margin: 0;
+  }
+
+  .profile__title {
+    font-size: 32px;
+    margin: 0;
+    padding-right: 8px;
+  }
+
   .profile__description {
     width: 100%;
     text-align: center;
+    margin: 8px 0 30px;
   }
 
   .profile__add-button {
     margin: 0;
-    width: 100%;
+    width: 80%;
+    margin-bottom: 30px;
   }
 
   .profile__edit-button {
@@ -29,17 +49,60 @@
 }
 
 @media screen and (max-width: 320px) {
+  .page {
+    margin: 0 auto;
+  }
+
+  .header {
+    margin: 0;
+  }
+
+  .header__image {
+    margin: 28px 27px;
+  }
+
+  .profile__image {
+    margin: 0 auto;
+  }
+
   .profile__title {
-    text-align: center;
+    font-size: 22px;
+    line-height: 27px;
+    font-weight: 500;
+    margin-top: 30px;
   }
-  .profile__edit-button {
-    margin-top: 8px;
-  }
+
   .profile__description {
     margin-top: 8px;
-    margin-bottom: 8px;
+    margin-bottom: 36px;
   }
+
+  .profile__edit-button {
+    margin-top: auto;
+    margin-left: 10px;
+  }
+  .profile__add-button {
+    margin-bottom: 36px;
+    width: 282px;
+  }
+}
+@media screen and (max-width: 775px) {
+  .header__image {
+    margin-left: 20px;
+  }
+
   .profile__image {
-    margin: 0;
+    margin-left: 15px;
+  }
+
+  .profile__info {
+    margin: auto;
+  }
+
+  .profile__title {
+    margin-right: 0;
+  }
+  .profile__add-button {
+    margin-right: 20px;
   }
 }
