--- a/pages/index.css
+++ b/pages/index.css
@@ -2,8 +2,9 @@
 @import url(../blocks/header.css);
 @import url(../blocks/profile.css);
 @import url(../blocks/cards.css);
+@import url(../blocks/footer.css);
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 580px) {
   .page {
     margin: 0;
   }
@@ -74,7 +75,6 @@
 
   .profile__description {
     margin-top: 8px;
-    margin-bottom: 36px;
   }
 
   .profile__edit-button {
@@ -83,26 +83,47 @@
   }
   .profile__add-button {
     margin-bottom: 36px;
-    width: 282px;
+    max-width: 282px;
+    width: 100%;
+  }
+
+  .footer {
+    max-width: 282;
+    width: 100%;
+    display: flex;
+  }
+
+  .footer__text {
+    width: 100%;
+    margin: 0 auto;
   }
 }
-@media screen and (max-width: 775px) {
+
+@media screen and (max-width: 776px) {
   .header__image {
-    margin-left: 20px;
+    margin-left: 27px;
   }
 
-  .profile__image {
-    margin-left: 15px;
+  .profile {
+    flex-direction: column;
   }
 
-  .profile__info {
-    margin: auto;
-  }
-
-  .profile__title {
-    margin-right: 0;
-  }
   .profile__add-button {
-    margin-right: 20px;
+    margin: 0 0 36px;
+  }
+
+  .profile__description {
+    margin-top: 8px;
+  }
+
+  .footer {
+    display: flex;
+  }
+
+  .footer__text {
+    max-width: 581px;
+    width: 100%;
+    padding: 48px 0 36px 19px;
+    margin: auto;
   }
 }
