--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,52 +1,8 @@
-.card__list {
+.cards__list {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, 282px);
   grid-gap: 20px 17px;
   margin: 0;
   padding: 0;
-}
-
-.card {
-  display: flex;
-  flex-direction: column;
-}
-
-.card__image {
-  width: 282px;
-  height: 282px;
-  border-radius: 10px 10px 0 0;
-}
-
-.card__description {
-  display: flex;
-  background: white;
-  color: black;
-  padding: 25px 20px 25px 20px;
-  align-items: center;
-  justify-content: space-between;
-  border-radius: 0 0 10px 10px;
-}
-
-h2 {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  font-family: "Inter" "Arial" sans-serif;
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 29px;
-  margin: 0;
-}
-
-.card__like-button {
-  background: transparent url(../images/like-button.svg) no-repeat center;
-  width: 21px;
-  height: 18px;
-  padding-right: 20px;
-  border: none;
-}
-
-.card__like-button:hover {
-  background-color: rgba(128, 128, 128, 0.6);
 }
