--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,12 +1,36 @@
 .header {
   margin-top: 45px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.7);
 }
-.header::after {
-  content: "";
-  width: 100%;
-  height: 1px;
-  background-color: #545454;
-  display: block;
-  opacity: 70%;
-  margin-top: 41px;
+
+.header__image {
+  padding-bottom: 41px;
+}
+
+@media screen and (max-width: 897px) {
+  .header__image {
+    margin-left: 27px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .header__image {
+    width: 126px;
+    height: 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    margin: 0;
+    height: 56px;
+    padding-top: 28px;
+  }
+
+  .header__image {
+    width: 126px;
+    height: 24px;
+    margin: 0;
+    padding-left: 27px;
+  }
 }
