--- a/blocks/page.css
+++ b/blocks/page.css
@@ -16,3 +16,9 @@
   flex-direction: column;
   min-height: 100vh;
 }
+
+@media screen and (max-width: 320px) {
+  .page {
+    margin: 0 auto;
+  }
+}
