--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -11,7 +11,7 @@
   height: 120px;
   margin-right: 24px;
   margin-bottom: 47.25px;
-  background-position: center;
+  object-position: center;
 }
 
 .profile__info {
@@ -29,6 +29,9 @@
   font-family: "Inter", "Arial", sans-serif;
   grid-area: title;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__edit-button {
@@ -37,11 +40,12 @@
   height: 24px;
   grid-area: button;
   margin: auto;
-  border-radius: 2px;
+  border: 1px solid white;
 }
 
 .profile__edit-button:hover {
-  background-color: rgba(128, 128, 128, 0.6);
+  opacity: 60%;
+  cursor: pointer;
 }
 
 .profile__description {
@@ -50,7 +54,10 @@
   font-weight: 400;
   font-family: "Inter", "Arial", sans-serif;
   grid-area: description;
-  margin-top: 7px;
+  margin: 7px 0 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__add-button {
@@ -60,8 +67,71 @@
   grid-area: button;
   margin-left: auto;
   border-radius: 2px;
+  border: 2px solid white;
 }
 
 .profile__add-button:hover {
-  background-color: rgba(128, 128, 128, 0.6);
+  opacity: 60%;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 580px) {
+  .profile {
+    width: 282px;
+    height: 286px;
+    flex-direction: row;
+    margin-bottom: 36px;
+  }
+
+  .profile__info {
+    width: 282px;
+    margin: 30px 0 36px;
+  }
+
+  .profile__image {
+    margin: 0;
+  }
+
+  .profile__title {
+    font-size: 22px;
+    line-height: 27px;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  .profile__description {
+    margin: 0;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    padding-top: 14px;
+    text-align: center;
+  }
+
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 897px) {
+  .profile {
+    flex-direction: column;
+    display: flex;
+    margin-bottom: 36px;
+  }
+
+  .profile__description {
+    text-align: center;
+  }
+
+  .profile__edit-button {
+    align-self: flex-end;
+  }
+
+  .profile__add-button {
+    width: 282px;
+    margin: 0;
+  }
 }
