--- a/pages/index.css
+++ b/pages/index.css
@@ -1,129 +1,7 @@
+@import url(../vendor/normalize.css);
 @import url(../blocks/page.css);
 @import url(../blocks/header.css);
 @import url(../blocks/profile.css);
 @import url(../blocks/cards.css);
 @import url(../blocks/footer.css);
-
-@media screen and (max-width: 580px) {
-  .page {
-    margin: 0;
-  }
-
-  .profile {
-    flex-direction: column;
-  }
-
-  .profile__info {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin-top: 30px;
-  }
-
-  .profile__image {
-    margin: 0;
-  }
-
-  .profile__title {
-    font-size: 32px;
-    margin: 0;
-    padding-right: 8px;
-  }
-
-  .profile__description {
-    width: 100%;
-    text-align: center;
-    margin: 8px 0 30px;
-  }
-
-  .profile__add-button {
-    margin: 0;
-    width: 80%;
-    margin-bottom: 30px;
-  }
-
-  .profile__edit-button {
-    margin: 0;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .page {
-    margin: 0 auto;
-  }
-
-  .header {
-    margin: 0;
-  }
-
-  .header__image {
-    margin: 28px 27px;
-  }
-
-  .profile__image {
-    margin: 0 auto;
-  }
-
-  .profile__title {
-    font-size: 22px;
-    line-height: 27px;
-    font-weight: 500;
-    margin-top: 30px;
-  }
-
-  .profile__description {
-    margin-top: 8px;
-  }
-
-  .profile__edit-button {
-    margin-top: auto;
-    margin-left: 10px;
-  }
-  .profile__add-button {
-    margin-bottom: 36px;
-    max-width: 282px;
-    width: 100%;
-  }
-
-  .footer {
-    max-width: 282;
-    width: 100%;
-    display: flex;
-  }
-
-  .footer__text {
-    width: 100%;
-    margin: 0 auto;
-  }
-}
-
-@media screen and (max-width: 776px) {
-  .header__image {
-    margin-left: 27px;
-  }
-
-  .profile {
-    flex-direction: column;
-  }
-
-  .profile__add-button {
-    margin: 0 0 36px;
-  }
-
-  .profile__description {
-    margin-top: 8px;
-  }
-
-  .footer {
-    display: flex;
-  }
-
-  .footer__text {
-    max-width: 581px;
-    width: 100%;
-    padding: 48px 0 36px 19px;
-    margin: auto;
-  }
-}
+@import url(../blocks/card.css);
