--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -5,7 +5,7 @@
 .footer__text {
   color: #545454;
   max-width: 318px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-family: "Inter";
   margin: 0;
 }
 
