--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -26,7 +26,7 @@
   font-size: 42px;
   line-height: 48px;
   font-weight: 500;
-  font-family: "Inter", "Arial", sans-serif;
+  font-family: "Inter";
   grid-area: title;
   margin: 0;
   text-overflow: ellipsis;
@@ -52,7 +52,7 @@
   font-size: 18px;
   line-height: 22px;
   font-weight: 400;
-  font-family: "Inter", "Arial", sans-serif;
+  font-family: "Inter";
   grid-area: description;
   margin: 7px 0 0;
   text-overflow: ellipsis;
@@ -104,7 +104,6 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
-    padding-top: 14px;
     text-align: center;
   }
 
@@ -124,7 +123,6 @@
 
   .profile__description {
     text-align: center;
-    margin-bottom: 14px;
   }
 
   .profile__edit-button {
@@ -133,6 +131,6 @@
 
   .profile__add-button {
     width: 282px;
-    margin: 0;
+    margin: 14px 0 0;
   }
 }
