--- a/blocks/header.css
+++ b/blocks/header.css
@@ -20,7 +20,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) {
   .header {
     margin: 0;
     height: 56px;
