--- a/blocks/page.css
+++ b/blocks/page.css
@@ -17,7 +17,7 @@
   min-height: 100vh;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) {
   .page {
     margin: 0 auto;
   }
