--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -22,15 +22,24 @@
   }
 }
 
-@media screen and (minx-width: 320px) {
+@media screen and (max-width: 580px) {
   .footer {
+    margin: 0 auto;
     padding: 0;
+    width: 282px;
   }
 
   .footer__text {
-    width: 100%;
-    padding: 0;
     width: 282px;
-    height: 14px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+    width: 282px;
+  }
+
+  .footer__text {
+    width: 282px;
   }
 }
