--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -59,6 +59,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 370px;
 }
 
 .profile__add-button {
@@ -76,7 +77,7 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 878px) {
+@media screen and (max-width: 896px) {
   .profile {
     display: flex;
     flex-direction: column;
@@ -91,20 +92,35 @@
     margin: 30px 0 36px;
   }
 
+  .profile__title {
+    font-size: 42px;
+    font-weight: 500;
+    text-align: center;
+    margin:auto;
+    max-width: 373px;
+  }
+
   .profile__description {
     text-align: center;
-    padding-bottom: 12px;
-    margin-top: 14px;
     padding: 0;
+    font-size: 18px;
+    font-weight: 400;
+    text-align: center;
+    margin:auto;
+    padding-top: 14px;
+  }
+
+  .profile__edit-button {
+    width: 24px;
+    height: 24px;
   }
 
   .profile__add-button {
     margin: 0;
   }
 }
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 597px) {
   .profile {
-    width: 282px;
     margin-bottom: 36px;
     display: flex;
   }
@@ -126,14 +142,24 @@
     line-height: 27px;
     font-weight: 500;
     text-align: center;
-    min-width: 220px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 240px;
+    margin: 0;
+    padding-right: 10px;
   }
 
   .profile__description {
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
-    text-align: center;
+    text-align: center; 
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    min-width: 282px;
+
   }
 
   .profile__edit-button {
@@ -144,5 +170,15 @@
 
   .profile__add-button {
     width: 282px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile__title {
+    
+  }
+  
+  .profile__description {
+    
   }
 }
