--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,39 +1,39 @@
 .footer {
   padding: 67px 0 60px;
-  overflow: hidden;
-  margin: 0 auto;
 }
 
 .footer__text {
   color: #545454;
   font-family: "Inter", Arial, Helvetica, sans-serif;
   margin: 0;
-  max-width: 282px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
 }
 
 @media screen and (max-width: 896px) {
-  .footer {
-    margin: 0 auto;
-  }
   .footer__text {
     margin: auto;
-    min-width: 580px;
+    max-width: 580px;
   }
 }
 
 @media screen and (max-width: 598px) {
   .footer__text {
-    margin: auto;
     min-width: 282px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+  }
+
+  .footer {
+    max-width: 282px;
+    margin: 48px auto 36px;
+    padding: 0;
   }
 }
 
 @media screen and (max-width: 320px) {
-  .footer {
-    max-width: 282px;
-    margin: 0 auto;
-  }
-
   .footer__text {
     min-width: 282px;
     margin: 0;
