--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,10 +1,10 @@
 .header {
-  margin-top: 45px;
-  border-bottom: 1px solid rgba(54, 54, 54, 0.7);
+  margin-top: 28px;
+  border-bottom: 1px solid rgb(84, 84, 84, 0.7);
 }
 
 .header__image {
-  padding-bottom: 41px;
+  margin-bottom: 42px;
 }
 
 @media screen and (max-width: 878px) {
@@ -24,6 +24,7 @@
   .header {
     margin: 0;
     padding-top: 28px;
+    padding-bottom: 41px;
   }
 
   .header__image {
