--- a/blocks/header.css
+++ b/blocks/header.css
@@ -17,20 +17,6 @@
   .header__image {
     width: 126px;
     height: 24px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .header {
-    margin: 0;
-    padding-top: 28px;
-    padding-bottom: 41px;
-  }
-
-  .header__image {
-    width: 126px;
-    height: 24px;
-    margin: 0;
-    padding-left: 27px;
+    margin: 0 0 32px 27px;
   }
 }
