--- a/blocks/card.css
+++ b/blocks/card.css
@@ -4,10 +4,27 @@
   font-family: "Inter", Arial, Helvetica, sans-serif;
 }
 
+.trash-button {
+  background: transparent url(../images/Group.svg);
+  background-color: transparent;
+  width: 18px;
+  height: 19.3px;
+  position: absolute;
+  margin: 18px 15px 0;
+  border: none;
+  align-self: flex-end;
+  cursor: pointer;
+}
+
+.trash-button:hover {
+  opacity: 60%;
+}
+
 .card__image {
   width: 282px;
   height: 282px;
   border-radius: 10px 10px 0 0;
+  display: block;
 }
 
 .card__description {
@@ -42,4 +59,8 @@
 .card__like-button:hover {
   opacity: 50%;
   cursor: pointer;
+}
+
+.card__like-button_active {
+  background-image: url(../images/black-like-button.svg);
 }
