--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -24,17 +24,6 @@
   width: 358px;
 }
 
-.modal > .modal__add-container {
-  visibility: hidden;
-  opacity: 0;
-  transition: visibility 0s, opacity 0.3s linear;
-}
-
-.modal.modal:hover > .modal__add-container {
-  visibility: visible;
-  opacity: 1;
-}
-
 .modal__close-button {
   background-image: url(../images/Close\ Icon.svg);
   background-size: contain;
@@ -63,7 +52,7 @@
   flex-direction: column;
 }
 
-.modal__form-input {
+.modal__form_input {
   margin-bottom: 30px;
   border-top: 1px;
   border-color: lightgray;
@@ -77,9 +66,11 @@
   line-height: 16.94px;
   text-align: left;
 }
+
 .modal__form-input::placeholder {
   color: black;
 }
+
 .modal__button {
   height: 50px;
   width: 100%;
@@ -95,61 +86,7 @@
   cursor: pointer;
 }
 
-.modal__add-container {
-  background-color: white;
-  margin: auto;
-  position: relative;
-  padding: 34px 36px;
-  border-radius: 10px;
-}
-
-.modal__add_close-button {
-  background-image: url(../images/Close\ Icon.svg);
-  width: 40.7px;
-  height: 40.7px;
-  position: absolute;
-  top: -45px;
-  right: -45px;
-  background-size: contain;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-.modal__add_close-button:hover {
-  opacity: 60%;
-}
-
-.modal__add_heading {
-  color: black;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  font-size: 24px;
-  font-weight: 900;
-  line-height: 29.05px;
-  text-align: left;
-  margin: 0;
-  padding-bottom: 54px;
-}
-
-.modal__add_form {
-  display: flex;
-  flex-direction: column;
-  width: 358px;
-}
-
-.modal__add_input {
-  height: 27.26px;
-  border-top: 1px solid lightgray;
-  border-top: 0;
-  border-right: 0;
-  border-left: 0;
-}
-
-.modal__add_input:first-child {
-  margin-bottom: 29.74px;
-}
-
-.modal__add_button {
+.modal__button_add {
   height: 50px;
   margin-top: 48px;
   width: 100%;
@@ -164,13 +101,15 @@
   cursor: pointer;
 }
 
-.popup_modal_container {
+.modal__container_image_preview {
   padding: 0;
   max-width: 75wh;
   max-height: 75vh;
+  position: relative;
+  margin: auto;
 }
 
-.popup__title {
+.modal__image_description {
   margin: 0;
   font-family: "Inter", Arial, Helvetica, sans-serif;
   font-size: 12px;
@@ -183,7 +122,7 @@
   bottom: -20px;
 }
 
-.popup__image {
+.modal__image {
   max-width: 75vw;
   max-height: 75vh;
   margin: 0;
@@ -197,16 +136,19 @@
     display: flex;
     flex-direction: column;
   }
+
   .modal__close-button {
     width: 26px;
     height: 26px;
     right: 5px;
   }
+
   .modal__heading {
     font-size: 18px;
     line-height: 22px;
     max-width: 238px;
   }
+
   .modal__form {
     max-width: 238px;
   }
@@ -215,69 +157,5 @@
     font-size: 14px;
     line-height: 17px;
     max-width: 238px;
-  }
-
-  .modal__button {
-    font-size: 14px;
-    line-height: 17px;
-  }
-
-  .modal__add-container {
-    max-width: 238px;
-    padding: 25px 22px 22px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .modal__add_close-button {
-    width: 26px;
-    height: 26px;
-    right: 5px;
-  }
-
-  .modal__add_heading {
-    font-size: 18px;
-    line-height: 22px;
-    max-width: 238px;
-  }
-
-  .modal__add_form {
-    max-width: 238px;
-  }
-
-  .modal__add_input {
-    font-size: 14px;
-    line-height: 17px;
-    max-width: 238px;
-  }
-
-  .modal__add_button {
-    font-size: 14px;
-    line-height: 17px;
-  }
-  .popup_modal_container {
-    padding: 0;
-    max-width: 75wh;
-    max-height: 75vh;
-  }
-
-  .popup__title {
-    margin: 0;
-    font-family: "Inter";
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 14.52px;
-    text-align: left;
-    color: white;
-    position: absolute;
-    left: 0;
-    bottom: -20px;
-  }
-
-  .popup__image {
-    max-width: 75vw;
-    max-height: 75vh;
-    margin: 0;
-    display: block;
   }
 }
