--- a/blocks/card.css
+++ b/blocks/card.css
@@ -5,7 +5,7 @@
 }
 
 .trash-button {
-  background: transparent url(../images/Group.svg);
+  background: transparent url(../images/Group.svg) no-repeat;
   background-color: transparent;
   width: 18px;
   height: 19.3px;
@@ -49,7 +49,7 @@
 }
 
 .card__like-button {
-  background: transparent url(../images/like-button.svg) no-repeat center;
+  background: transparent url(../images/like-button.svg) center no-repeat;
   width: 21px;
   height: 18px;
   padding-right: 20px;
@@ -59,6 +59,7 @@
 .card__like-button:hover {
   opacity: 50%;
   cursor: pointer;
+  background: no-repeat;
 }
 
 .card__like-button_active {
