--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -41,6 +41,11 @@
   grid-area: button;
   margin: auto;
   border: 1px solid white;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.78px;
+  text-align: center;
 }
 
 .profile__edit-button:hover {
@@ -134,6 +139,7 @@
     width: 18px;
     height: 18px;
     margin: 0;
+    font-size: 14px;
   }
 
   .profile__add-button {
