--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -29,7 +29,7 @@
 }
 
 .modal__close-button {
-  background-image: url(../images/Close\ Icon.svg);
+  background-image: url(../images/Close\ Icon.svg) no-repeat;
   background-size: contain;
   background-color: transparent;
   border: none;
