--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -29,8 +29,8 @@
 }
 
 .modal__close-button {
-  background-image: url(../images/Close\ Icon.svg) no-repeat;
-  background-size: contain;
+  background-image: url(../images/Close\ Icon.svg);
+  background-size: cover;
   background-color: transparent;
   border: none;
   width: 40px;
@@ -105,7 +105,7 @@
   cursor: pointer;
 }
 
-.modal__container_image_preview {
+.modal__container_preview {
   padding: 0;
   max-width: 75wh;
   max-height: 75vh;
@@ -161,5 +161,16 @@
     font-size: 14px;
     line-height: 17px;
     max-width: 238px;
+  }
+  .modal__button {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.94px;
+  }
+
+  .modal__add-button {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 16.94px;
   }
 }
